# QtyPie-Painter-app

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SVG_README.md  ShapePanel.cpp  colourpanel.cpp  colourpanel.h  main.cpp  mainwidget.cpp  mainwidget.h  mycanvas.cpp  mycanvas.h  output.xml  shape_loaders.cpp  shape_registry.h  shapepanel.h  shapes.h  shapes_base.h  shapes_lines.h  shapes_rounded.h  shapes_simple.h  svg_convert.cpp  svg_convert.h  svg_explanation.md  svg_parser.cpp  svg_parser.h  test_input.xml  ui.cpp  ui.h
canvas/: mycanvas.h  mycanvas_clipboard.cpp  mycanvas_draw.cpp  mycanvas_mouse.cpp  undoredo.cpp  undoredo.h
canvas/core/: mycanvas.h  mycanvas_render.cpp  mycanvas_shapes.cpp
canvas/input/: mycanvas_clipboard.cpp  mycanvas_mouse.cpp  mycanvas_mousemove.cpp  mycanvas_mousepress.cpp  mycanvas_mouserelease.cpp
canvas/undo/: undoredo.cpp  undoredo.h
config/: config.h
shapes/: base.cpp  base.h  base_equal_hack.cpp  lines.cpp  lines.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  rounded.cpp  rounded.h  shapes.h  simple.cpp  simple.h  uniform.cpp  uniform.h  uniform_hexagon.cpp
shapes/base/: shape.cpp  shape.h  shape_resize.cpp
shapes/freeform/: line.cpp  line.h  polyline.cpp  polyline.h
shapes/rectangular/: rectangle.cpp  rectangle.h  rounded_rectangle.cpp  rounded_rectangle.h  text_box.cpp  text_box.h
shapes/uniform/: circle.cpp  circle.h  hexagon.cpp  hexagon.h  square.cpp  square.h
stacks/: undoredo.cpp
svg/: Data2Shape.cpp  Data2Shape.h  Data2Vec.cpp  Data2Vec.h  Shape2Data.cpp  Shape2Data.h  Svg2Data.h  Svg2Data_File.cpp  Svg2Data_Xml.cpp  Vec2Svg.cpp  Vec2Svg.h  shape_loaders.cpp  shape_loaders_1.cpp  shape_loaders_basic.cpp  shape_loaders_complex.cpp  shape_registry.cpp  shape_registry.h  svg_convert.cpp  svg_convert.h  svg_parser.cpp  svg_parser.h  test_input.xml
svg/export/: Shape2Data.cpp  Shape2Data.h  Vec2Svg.cpp  Vec2Svg.h
svg/import/: Data2Shape.cpp  Data2Shape.h  Data2Vec.cpp  Data2Vec.h
svg/parser/: Svg2Data.h  Svg2Data_File.cpp  Svg2Data_Xml.cpp
svg/registry/: shape_loaders_basic.cpp  shape_loaders_complex.cpp  shape_registry.cpp  shape_registry.h
ui/: colourpanel.cpp  colourpanel.h  controlpanel.cpp  controlpanel.h  floatingmenu.cpp  floatingmenu.h  mainwidget.cpp  mainwidget.h  mycanvas.cpp  mycanvas.h  mycanvas_clipboard.cpp  mycanvas_draw.cpp  mycanvas_mouse.cpp  shapepanel.cpp  shapepanel.h
ui/main/: mainwidget.cpp  mainwidget.h  mainwidget_file.cpp
ui/menus/: floatingmenu.cpp  floatingmenu.h
ui/panels/: colourpanel.cpp  colourpanel.h  controlpanel.cpp  controlpanel.h  shapepanel.cpp  shapepanel.h
